Document connection-bounding options: permit vs Hikari-only, virtual threads, R2DBC
Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>